--- a/benchmarks.ipynb
+++ b/benchmarks.ipynb
@@ -73,94 +73,226 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>14613</td>\n",
-       "      <td>795</td>\n",
+       "      <td>7.950000e+02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>6884</td>\n",
-       "      <td>195</td>\n",
+       "      <td>1.950000e+02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1547143</td>\n",
-       "      <td>1833</td>\n",
+       "      <td>1.833000e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>143396386</td>\n",
-       "      <td>29445376</td>\n",
+       "      <td>2.944538e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>6716487316</td>\n",
-       "      <td>323</td>\n",
+       "      <td>3.230000e+02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>3843</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.000000e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>23296971</td>\n",
-       "      <td>2772021</td>\n",
+       "      <td>2.772021e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>926502</td>\n",
-       "      <td>25998</td>\n",
+       "      <td>2.599800e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>8510236506</td>\n",
-       "      <td>86928</td>\n",
+       "      <td>8.692800e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>536424345</td>\n",
-       "      <td>2274830</td>\n",
+       "      <td>2.274830e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>334874</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1903</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>13247753184</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>22037</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1847011</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>49142</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>113557</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>16029</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2377447053</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1336829</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>21955647089</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>643675607</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>25642984</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>3317682</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>9669052452</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>1139428827655</td>\n",
-       "      <td>1033220625</td>\n",
+       "      <td>1.033221e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2060709464</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
        "      <td>1753186651881</td>\n",
-       "      <td>208457372</td>\n",
+       "      <td>2.084574e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>200017458</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
        "      <td>327822188500</td>\n",
-       "      <td>329836578</td>\n",
+       "      <td>3.298366e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>28305640</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>899638</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
        "      <td>6259346259000</td>\n",
-       "      <td>1968167207500</td>\n",
+       "      <td>1.968167e+12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>65545545</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>1348492</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>37277040565</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                Python          Julia\n",
-       "Problem                              \n",
-       "1                14613            795\n",
-       "2                 6884            195\n",
-       "3              1547143           1833\n",
-       "4            143396386       29445376\n",
-       "5           6716487316            323\n",
-       "6                 3843              2\n",
-       "7             23296971        2772021\n",
-       "8               926502          25998\n",
-       "9           8510236506          86928\n",
-       "10           536424345        2274830\n",
-       "31       1139428827655     1033220625\n",
-       "35       1753186651881      208457372\n",
-       "37        327822188500      329836578\n",
-       "44       6259346259000  1968167207500"
+       "                Python         Julia\n",
+       "Problem                             \n",
+       "1                14613  7.950000e+02\n",
+       "2                 6884  1.950000e+02\n",
+       "3              1547143  1.833000e+03\n",
+       "4            143396386  2.944538e+07\n",
+       "5           6716487316  3.230000e+02\n",
+       "6                 3843  2.000000e+00\n",
+       "7             23296971  2.772021e+06\n",
+       "8               926502  2.599800e+04\n",
+       "9           8510236506  8.692800e+04\n",
+       "10           536424345  2.274830e+06\n",
+       "11              334874           NaN\n",
+       "13                1903           NaN\n",
+       "14         13247753184           NaN\n",
+       "16               22037           NaN\n",
+       "17             1847011           NaN\n",
+       "18               49142           NaN\n",
+       "19              113557           NaN\n",
+       "20               16029           NaN\n",
+       "21          2377447053           NaN\n",
+       "22             1336829           NaN\n",
+       "23         21955647089           NaN\n",
+       "24           643675607           NaN\n",
+       "25            25642984           NaN\n",
+       "29             3317682           NaN\n",
+       "30          9669052452           NaN\n",
+       "31       1139428827655  1.033221e+09\n",
+       "34          2060709464           NaN\n",
+       "35       1753186651881  2.084574e+08\n",
+       "36           200017458           NaN\n",
+       "37        327822188500  3.298366e+08\n",
+       "40            28305640           NaN\n",
+       "42              899638           NaN\n",
+       "44       6259346259000  1.968167e+12\n",
+       "45            65545545           NaN\n",
+       "67             1348492           NaN\n",
+       "92         37277040565           NaN"
       ]
      },
      "execution_count": 3,
