--- a/python/problem_011.ipynb
+++ b/python/problem_011.ipynb
@@ -148,7 +148,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "339 μs ± 3.79 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "335 μs ± 491 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
