--- a/python/problem_036.ipynb
+++ b/python/problem_036.ipynb
@@ -50,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "163 ms ± 5.07 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "200 ms ± 2.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
