--- a/python/problem_019.ipynb
+++ b/python/problem_019.ipynb
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "99.3 μs ± 393 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "114 μs ± 1.53 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.65 ms ± 109 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "8.93 ms ± 326 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
