--- a/python/problem_045.ipynb
+++ b/python/problem_045.ipynb
@@ -83,7 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "54.8 ms ± 226 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "65.5 ms ± 2.14 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
